--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/Styles.css" />
   </head>
 
-  <body>
+  <body class="page">
     <header>
       <nav>
         <a href="./index.html ">WebStudio</a>
