--- a/index.html
+++ b/index.html
@@ -11,35 +11,35 @@
   <body class="page">
     <header>
       <nav>
-        <a href="./index.html ">WebStudio</a>
-        <ul>
-          <li>
+        <a href="./index.html " class="logo">WebStudio</a>
+        <ul class="site-nav list">
+          <li class="link">
             <a href="#">Студія</a>
           </li>
-          <li>
+          <li class="link">
             <a href="#">Портфоліо</a>
           </li>
-          <li>
+          <li class="link">
             <a href="#">Контакти</a>
           </li>
         </ul>
       </nav>
-      <ul>
-        <li>
+      <ul class="contacts list">
+        <li class="link">
           <a href="#">info@devstudio.com</a>
         </li>
-        <li>
+        <li class="link">
           <a href="#">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
     <main>
-      <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
+      <section class="hero">
+        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
         <button type="button">Замовити послугу</button>
       </section>
-      <section>
-        <h2>Наші переваги</h2>
+      <section class="section">
+        <h2 class="section-features">Наші переваги</h2>
         <ul>
           <li>
             <h3>Увага до дітей</h3>
@@ -59,8 +59,8 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Чим ми займаємося</h2>
+      <section class="section">
+        <h2 class="section-work">Чим ми займаємося</h2>
         <ul>
           <li>
             <img
@@ -81,8 +81,8 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Наша команда</h2>
+      <section class="section">
+        <h2 class="section-team">Наша команда</h2>
         <ul>
           <li>
             <h3>Ігор Дем'яненко</h3>
