--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/Styles.css" />
   </head>
 
-  <body class="page">
+  <body>
     <header>
       <nav>
         <a href="./index.html " class="logo">WebStudio</a>
@@ -25,10 +25,10 @@
         </ul>
       </nav>
       <ul class="contacts list">
-        <li class="link">
+        <li class="link-contacts">
           <a href="#">info@devstudio.com</a>
         </li>
-        <li class="link">
+        <li class="link-contacts">
           <a href="#">+38 096 111 11 11</a>
         </li>
       </ul>
@@ -39,8 +39,8 @@
         <button type="button">Замовити послугу</button>
       </section>
       <section class="section">
-        <h2 class="section-features">Наші переваги</h2>
-        <ul>
+        <h2 class="visually-hidden">Наші переваги</h2>
+        <ul class="section-features">
           <li>
             <h3>Увага до дітей</h3>
             <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
