Добавив коліртексту всекцію команда

--- a/index.html
+++ b/index.html
@@ -43,19 +43,25 @@
         <ul class="section-features">
           <li>
             <h3>Увага до дітей</h3>
-            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+            <p class="text">
+              Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+            </p>
           </li>
           <li>
             <h3>Пунктуальність</h3>
-            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+            <p class="text">
+              Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+            </p>
           </li>
           <li>
             <h3>Планування</h3>
-            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+            <p class="text">Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
           <li>
             <h3>Сучасні технології</h3>
-            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+            <p class="text">
+              Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+            </p>
           </li>
         </ul>
       </section>
@@ -81,12 +87,12 @@
           </li>
         </ul>
       </section>
-      <section class="section">
-        <h2 class="section-team">Наша команда</h2>
+      <section class="section-team">
+        <h2 class="team">Наша команда</h2>
         <ul>
           <li>
-            <h3>Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
+            <h3 class="title">Ігор Дем'яненко</h3>
+            <p class="subtitle">Product Designer</p>
             <img
               src="./images/img4.jpg"
               alt="Чоловік в коричневій сорочці посміхається"
@@ -94,18 +100,18 @@
             />
           </li>
           <li>
-            <h3>Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
+            <h3 class="title">Ольга Рєпіна</h3>
+            <p class="subtitle">Frontend Developer</p>
             <img src="./images/img5.jpg" alt="Дівчина блондинка посміхається" width="270" />
           </li>
           <li>
-            <h3>Микола Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="title">Микола Тарасов</h3>
+            <p class="subtitle">Marketing</p>
             <img src="./images/img6.jpg" alt="Чоловік в білій сорочці посміхається" width="270" />
           </li>
           <li>
-            <h3>Михайло Єрмаков</h3>
-            <p>UI Designer</p>
+            <h3 class="title">Михайло Єрмаков</h3>
+            <p class="subtitle">UI Designer</p>
             <img
               src="./images/img7.jpg"
               alt="Чоловік в чорній сорочці склав руки перед собою "
