--- a/index.html
+++ b/index.html
@@ -14,33 +14,33 @@
         <a href="./index.html " class="logo">WebStudio</a>
         <ul class="site-nav list">
           <li class="link">
-            <a href="#">Студія</a>
+            <a href="#" class="link">Студія</a>
           </li>
           <li class="link">
-            <a href="#">Портфоліо</a>
+            <a href="#" class="link">Портфоліо</a>
           </li>
           <li class="link">
-            <a href="#">Контакти</a>
+            <a href="#" class="link">Контакти</a>
           </li>
         </ul>
       </nav>
       <ul class="contacts list">
         <li class="link-contacts">
-          <a href="#">info@devstudio.com</a>
+          <a href="#" class="link">info@devstudio.com</a>
         </li>
         <li class="link-contacts">
-          <a href="#">+38 096 111 11 11</a>
+          <a href="#" class="link">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
     <main>
       <section class="hero">
         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">Замовити послугу</button>
+        <button type="button" class="button">Замовити послугу</button>
       </section>
       <section class="section">
         <h2 class="visually-hidden">Наші переваги</h2>
-        <ul class="section-features">
+        <ul class="section-features list">
           <li>
             <h3>Увага до дітей</h3>
             <p class="text">
@@ -67,7 +67,7 @@
       </section>
       <section class="section">
         <h2 class="section-work">Чим ми займаємося</h2>
-        <ul>
+        <ul class="work list">
           <li>
             <img
               src="./images/img1.jpg"
@@ -89,7 +89,7 @@
       </section>
       <section class="section-team">
         <h2 class="team">Наша команда</h2>
-        <ul>
+        <ul class="items-team list">
           <li>
             <h3 class="title">Ігор Дем'яненко</h3>
             <p class="subtitle">Product Designer</p>
