link portfolio.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="#" class="link">Студія</a>
           </li>
           <li class="link">
-            <a href="#" class="link">Портфоліо</a>
+            <a href="./portfolio.html" class="link">Портфоліо</a>
           </li>
           <li class="link">
             <a href="#" class="link">Контакти</a>
