--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html " class="logo">WebStudio</a>
+        <a href="./index.html " class="logo"><span class="logo-text">Web</span>Studio</a>
         <ul class="site-nav list">
           <li class="link">
             <a href="#" class="link">Студія</a>
@@ -122,7 +122,7 @@
       </section>
     </main>
     <footer>
-      <a href="./idex.html ">WebStudio</a>
+      <a href="./idex.html " class="logo"><span class="logo-text">Web</span>Studio</a>
       <address>
         <ul>
           <li>
