--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
       </nav>
       <ul class="contacts list">
         <li class="link-contacts">
-          <a href="#" class="link">info@devstudio.com</a>
+          <a href="#" class="link-contacts">info@devstudio.com</a>
         </li>
         <li class="link-contacts">
-          <a href="#" class="link">+38 096 111 11 11</a>
+          <a href="#" class="link-contacts">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
@@ -121,23 +121,24 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./idex.html " class="logo"><span class="logo-text">Web</span>Studio</a>
+    <footer class="footer">
+      <a href="./idex.html " class="logo-footer"><span class="logo-text">Web</span>Studio</a>
       <address>
-        <ul>
-          <li>
+        <ul class="link-items list">
+          <li class="link-adress">
             <a
               href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
               target="_blank"
               rel="noopener noreferrer nofollow"
+              class="link-adress"
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <li>
-            <a href="#">info@devstudio.com</a>
+          <liclass="link-item">
+            <a href="#" class="link-item">info@devstudio.com</a>
           </li>
-          <li>
-            <a href="#">+38 096 111 11 11</a>
+          <li class="link-item">
+            <a href="#" class="link-item">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
