Добавлено кнопці фокус

--- a/index.html
+++ b/index.html
@@ -83,14 +83,15 @@
             />
           </li>
           <li>
-            <img src="./images/img3.jpg" alt="Людина працює на планшеті" width="370" />
+            <img src="./images/img3.jpg" alt="Людина працює на планшеті"
+            width="370" />
           </li>
         </ul>
       </section>
       <section class="section-team">
         <h2 class="team">Наша команда</h2>
         <ul class="items-team list">
-          <li>
+          <li class="team-image">
             <h3 class="title">Ігор Дем'яненко</h3>
             <p class="subtitle">Product Designer</p>
             <img
@@ -99,7 +100,7 @@
               width="270"
             />
           </li>
-          <li>
+          <li >
             <h3 class="title">Ольга Рєпіна</h3>
             <p class="subtitle">Frontend Developer</p>
             <img src="./images/img5.jpg" alt="Дівчина блондинка посміхається" width="270" />
