--- a/index.html
+++ b/index.html
@@ -45,23 +45,23 @@
         <h2 class="visually-hidden">Наші переваги</h2>
         <ul class="section-features list">
           <li>
-            <h3>Увага до дітей</h3>
+            <h3 class="features-title">Увага до дітей</h3>
             <p class="text">
               Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
             </p>
           </li>
           <li>
-            <h3>Пунктуальність</h3>
+            <h3 class="features-title">Пунктуальність</h3>
             <p class="text">
               Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
             </p>
           </li>
           <li>
-            <h3>Планування</h3>
+            <h class="features-title"3>Планування</h3>
             <p class="text">Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
           <li>
-            <h3>Сучасні технології</h3>
+            <h class="features-title"3>Сучасні технології</h3>
             <p class="text">
               Значимість цих проблем настільки очевидна, що реалізація планових завдань.
             </p>
@@ -103,17 +103,17 @@
               width="270"
             />
           </li>
-          <li >
+          <li class="team-image">
             <h3 class="title">Ольга Рєпіна</h3>
             <p class="subtitle">Frontend Developer</p>
             <img src="./images/img5.jpg" alt="Дівчина блондинка посміхається" width="270" />
           </li>
-          <li>
+          <li class="team-image">
             <h3 class="title">Микола Тарасов</h3>
             <p class="subtitle">Marketing</p>
             <img src="./images/img6.jpg" alt="Чоловік в білій сорочці посміхається" width="270" />
           </li>
-          <li>
+          <li class="team-image">
             <h3 class="title">Михайло Єрмаков</h3>
             <p class="subtitle">UI Designer</p>
             <img
