--- a/portfolio.html
+++ b/portfolio.html
@@ -37,18 +37,92 @@
       </ul>
     </header>
     <main>
-      <h1>Портфоліо</h1>
-      <ul>
+      <h1 class="visually-hidden">Портфоліо</h1>
+      <ul class="filter list">
         <li><button type="button">Усі</button></li>
         <li><button type="button">Веб-сайти</button></li>
         <li><button type="button">Додатки</button></li>
         <li><button type="button">Дизайн</button></li>
         <li><button type="button">Маркетинг</button></li>
       </ul>
-      
-
-
-
+      <section class="section-team">
+        <h2 class="visually-hidden">Роботи</h2>
+        <ul class="items-team list">
+          <li class="team-image">
+            <h3 class="title">Технокряк</h3>
+            <p class="subtitle">Веб-сайт</p>
+            <img
+              src="./images/imgp1.jpg"
+              alt="Ноут на екрані якого 3 анкети з фото"
+              width="370"
+            />
+          </li>
+          <li class="team-image">
+            <h3 class="title">Постер new orlean vs golden star</h3>
+            <p class="subtitle">Дизайн</p>
+            <img src="./images/imgp2.jpg" alt="Чоловіки грають в баскетбол" width="370" />
+          </li>
+          <li class="team-image">
+            <h3 class="title">Ресторан seafood</h3>
+            <p class="subtitle">Додаток</p>
+            <img src="./images/imgp3.jpg" alt="Картинка з рибою" width="370" />
+          </li>
+          <li class="team-image">
+            <h3 class="title">Проєкт prime</h3>
+            <p class="subtitle">Маркетинг</p>
+            <img
+              src="./images/imgp4.jpg"
+              alt="Наушники"
+              width="370"
+            />
+          </li>
+          <li class="team-image">
+            <h3 class="title">Проєкт boxes</h3>
+            <p class="subtitle">Додаток</p>
+            <img
+              src="./images/imgp5.jpg"
+              alt="дві коробки різного кольору"
+              width="370"
+            />
+          </li>
+          <li class="team-image">
+            <h3 class="title">Inspiration has no borders</h3>
+            <p class="subtitle">Веб-сайт</p>
+            <img
+              src="./images/imgp6.jpg"
+              alt="монітор з зображенням карти світу"
+              width="370"
+            />
+          </li>
+          <li class="team-image">
+            <h3 class="title">Видання limited edition</h3>
+            <p class="subtitle">Дизайн</p>
+            <img
+              src="./images/imgp7.jpg"
+              alt="відкрита книга з картинками"
+              width="370"
+            />
+          </li>
+          <li class="team-image">
+            <h3 class="title">Проєкт lab</h3>
+            <p class="subtitle">Маркетинг</p>
+            <img
+              src="./images/imgp8.jpg"
+              alt="бейжик з написом та стрічкою"
+              width="370"
+            />
+          </li>
+          <li class="team-image">
+            <h3 class="title">Growing business</h3>
+            <p class="subtitle">Додаток</p>
+            <img
+              src="./images/imgp9.jpg"
+              alt="Чоловік друкує на ноутбуці"
+              width="370"
+            />
+          </li>
+        </ul>
+      </section> 
     </main>
     <footer class="footer">
       <a href="./idex.html " class="logo-footer"><span class="logo-text">Web</span>Studio</a>
