--- a/portfolio.html
+++ b/portfolio.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
     <link rel="stylesheet" href="./css/Styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
@@ -20,7 +23,7 @@
             <a href="#" class="link">Студія</a>
           </li>
           <li class="link">
-            <a href="./index.html" class="link  current">Портфоліо</a>
+            <a href="./index.html" class="link current">Портфоліо</a>
           </li>
           <li class="link">
             <a href="#" class="link">Контакти</a>
@@ -45,84 +48,55 @@
         <li><button type="button">Дизайн</button></li>
         <li><button type="button">Маркетинг</button></li>
       </ul>
-      <section class="section-team">
-        <h2 class="visually-hidden">Роботи</h2>
-        <ul class="items-team list">
-          <li class="team-image">
-            <h3 class="title">Технокряк</h3>
-            <p class="subtitle">Веб-сайт</p>
-            <img
-              src="./images/imgp1.jpg"
-              alt="Ноут на екрані якого 3 анкети з фото"
-              width="370"
-            />
-          </li>
-          <li class="team-image">
-            <h3 class="title">Постер new orlean vs golden star</h3>
-            <p class="subtitle">Дизайн</p>
-            <img src="./images/imgp2.jpg" alt="Чоловіки грають в баскетбол" width="370" />
-          </li>
-          <li class="team-image">
-            <h3 class="title">Ресторан seafood</h3>
-            <p class="subtitle">Додаток</p>
-            <img src="./images/imgp3.jpg" alt="Картинка з рибою" width="370" />
-          </li>
-          <li class="team-image">
-            <h3 class="title">Проєкт prime</h3>
-            <p class="subtitle">Маркетинг</p>
-            <img
-              src="./images/imgp4.jpg"
-              alt="Наушники"
-              width="370"
-            />
-          </li>
-          <li class="team-image">
-            <h3 class="title">Проєкт boxes</h3>
-            <p class="subtitle">Додаток</p>
-            <img
-              src="./images/imgp5.jpg"
-              alt="дві коробки різного кольору"
-              width="370"
-            />
-          </li>
-          <li class="team-image">
-            <h3 class="title">Inspiration has no borders</h3>
-            <p class="subtitle">Веб-сайт</p>
-            <img
-              src="./images/imgp6.jpg"
-              alt="монітор з зображенням карти світу"
-              width="370"
-            />
-          </li>
-          <li class="team-image">
-            <h3 class="title">Видання limited edition</h3>
-            <p class="subtitle">Дизайн</p>
-            <img
-              src="./images/imgp7.jpg"
-              alt="відкрита книга з картинками"
-              width="370"
-            />
-          </li>
-          <li class="team-image">
-            <h3 class="title">Проєкт lab</h3>
-            <p class="subtitle">Маркетинг</p>
-            <img
-              src="./images/imgp8.jpg"
-              alt="бейжик з написом та стрічкою"
-              width="370"
-            />
-          </li>
-          <li class="team-image">
-            <h3 class="title">Growing business</h3>
-            <p class="subtitle">Додаток</p>
-            <img
-              src="./images/imgp9.jpg"
-              alt="Чоловік друкує на ноутбуці"
-              width="370"
-            />
-          </li>
-        </ul>
-      </section> 
+
+      <h2 class="visually-hidden">Роботи</h2>
+      <ul class="items-team list">
+        <li class="team-image">
+          <h3 class="title">Технокряк</h3>
+          <p class="subtitle">Веб-сайт</p>
+          <img src="./images/imgp1.jpg" alt="Ноут на екрані якого 3 анкети з фото" width="370" />
+        </li>
+        <li class="team-image">
+          <h3 class="title">Постер new orlean vs golden star</h3>
+          <p class="subtitle">Дизайн</p>
+          <img src="./images/imgp2.jpg" alt="Чоловіки грають в баскетбол" width="370" />
+        </li>
+        <li class="team-image">
+          <h3 class="title">Ресторан seafood</h3>
+          <p class="subtitle">Додаток</p>
+          <img src="./images/imgp3.jpg" alt="Картинка з рибою" width="370" />
+        </li>
+        <li class="team-image">
+          <h3 class="title">Проєкт prime</h3>
+          <p class="subtitle">Маркетинг</p>
+          <img src="./images/imgp4.jpg" alt="Наушники" width="370" />
+        </li>
+        <li class="team-image">
+          <h3 class="title">Проєкт boxes</h3>
+          <p class="subtitle">Додаток</p>
+          <img src="./images/imgp5.jpg" alt="дві коробки різного кольору" width="370" />
+        </li>
+        <li class="team-image">
+          <h3 class="title">Inspiration has no borders</h3>
+          <p class="subtitle">Веб-сайт</p>
+          <img src="./images/imgp6.jpg" alt="монітор з зображенням карти світу" width="370" />
+        </li>
+        <li class="team-image">
+          <h3 class="title">Видання limited edition</h3>
+          <p class="subtitle">Дизайн</p>
+          <img src="./images/imgp7.jpg" alt="відкрита книга з картинками" width="370" />
+        </li>
+        <li class="team-image">
+          <h3 class="title">Проєкт lab</h3>
+          <p class="subtitle">Маркетинг</p>
+          <img src="./images/imgp8.jpg" alt="бейжик з написом та стрічкою" width="370" />
+        </li>
+        <li class="team-image">
+          <h3 class="title">Growing business</h3>
+          <p class="subtitle">Додаток</p>
+          <img src="./images/imgp9.jpg" alt="Чоловік друкує на ноутбуці" width="370" />
+        </li>
+      </ul>
     </main>
     <footer class="footer">
       <a href="./idex.html " class="logo-footer"><span class="logo-text">Web</span>Studio</a>
@@ -137,7 +111,7 @@
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <liclass="link-item">
+          <li class="link-item">
             <a href="#" class="link-item">info@devstudio.com</a>
           </li>
           <li class="link-item">
