прортфоліо оформлено текст

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
             </p>
           </li>
           <li>
-            <h class="features-title"3>Планування</h3>
+            <h class="features-title">Планування</h3>
             <p class="text">Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
           <li>
-            <h class="features-title"3>Сучасні технології</h3>
+            <h class="features-title">Сучасні технології</h3>
             <p class="text">
               Значимість цих проблем настільки очевидна, що реалізація планових завдань.
             </p>
@@ -138,7 +138,7 @@
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <liclass="link-item">
+          <li class="link-item">
             <a href="#" class="link-item">info@devstudio.com</a>
           </li>
           <li class="link-item">
