--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
     <link rel="stylesheet" href="./css/Styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
@@ -22,7 +25,7 @@
           <li class="link">
             <a href="./portfolio.html" class="link">Портфоліо</a>
           </li>
-          <li class="link">     
+          <li class="link">
             <a href="#" class="link">Контакти</a>
           </li>
         </ul>
@@ -57,11 +60,11 @@
             </p>
           </li>
           <li>
-            <h class="features-title">Планування</h3>
+            <h3 class="features-title">Планування</h3>
             <p class="text">Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
           <li>
-            <h class="features-title">Сучасні технології</h3>
+            <h3 class="features-title">Сучасні технології</h3>
             <p class="text">
               Значимість цих проблем настільки очевидна, що реалізація планових завдань.
             </p>
@@ -86,8 +89,7 @@
             />
           </li>
           <li>
-            <img src="./images/img3.jpg" alt="Людина працює на планшеті"
-            width="370" />
+            <img src="./images/img3.jpg" alt="Людина працює на планшеті" width="370" />
           </li>
         </ul>
       </section>
@@ -123,7 +125,7 @@
             />
           </li>
         </ul>
-      </section> 
+      </section>
     </main>
     <footer class="footer">
       <a href="./idex.html " class="logo-footer"><span class="logo-text">Web</span>Studio</a>
