--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,6 @@
         <li><button type="button" class="filter-button">Маркетинг</button></li>
       </ul>
       <h2 class="visually-hidden">Роботи</h2>
-
       <ul class="products list">
         <li class="product-image">
           <h3 class="product-title">Технокряк</h3>
@@ -74,22 +73,22 @@
         <li class="product-image">
           <h3 class="product-title">Проєкт boxes</h3>
           <p class="product">Додаток</p>
-          <img src="./images/imgp5.jpg" alt="дві коробки різного кольору" width="370" />
+          <img src="./images/imgp5.jpg" alt="Дві коробки різного кольору" width="370" />
         </li>
         <li class="product-image">
           <h3 class="product-title">Inspiration has no borders</h3>
           <p class="product">Веб-сайт</p>
-          <img src="./images/imgp6.jpg" alt="монітор з зображенням карти світу" width="370" />
+          <img src="./images/imgp6.jpg" alt="Монітор з зображенням карти світу" width="370" />
         </li>
         <li class="product-image">
           <h3 class="product-title">Видання limited edition</h3>
           <p class="product">Дизайн</p>
-          <img src="./images/imgp7.jpg" alt="відкрита книга з картинками" width="370" />
+          <img src="./images/imgp7.jpg" alt="Відкрита книга з картинками" width="370" />
         </li>
         <li class="product-image">
           <h3 class="product-title">Проєкт lab</h3>
           <p class="product">Маркетинг</p>
-          <img src="./images/imgp8.jpg" alt="бейжик з написом та стрічкою" width="370" />
+          <img src="./images/imgp8.jpg" alt="Бейжик з написом та стрічкою" width="370" />
         </li>
         <li class="product-image">
           <h3 class="product-title">Growing business</h3>
